# udp_ebpf

./: .env  DEPLOYMENT.md  Makefile  README.md  XDP_Migration_Report.md  analyze_stats.py  debug_network.py  debug_packet.py  debug_packet_flow.sh  debug_stats.sh  deploy_xdp.sh  fix_xdp_redirect.sh  optimize_system.sh  prepare.sh  pyproject.toml  realtime_packet_analyzer.py  requirements.txt  run_simple_tests.sh  run_tests_venv.sh  send_exact_packet.py  send_scapy_packet.py  send_vxlan_packet.py  setup_dependencies.sh  setup_venv.sh  simple_packet_monitor.py  test_arp.py  test_nat_logic  test_nat_logic.c  test_packet_types.py  test_udp_correct_mac.py  test_udp_correct_routing.py  test_vxlan_simple.sh  udp_df_modifier.bpf.c  udp_df_modifier_loader.c  udp_df_modifier_xdp  verify_setup.sh  xdp.sh  xdp.sh.backup  xdp_pipeline.sh
XDP_Initial/: README.md  deploy_xdp.sh  main.tf  setup_xdp.sh  terraform-xdp-integration.tf  udp_df_modifier.bpf.c  xdp-udp-modifier.service.template
XDP_New/: .env.example  DEPLOYMENT_COMPLETE.md  Makefile  README.md  check_readiness.sh  deploy_test.sh  monitor_performance.bt  optimize_system.sh  validate_config.sh  validate_pipeline.sh  vxlan_loader.c  vxlan_pipeline.bpf.c  vxlan_pipeline.h  vxlan_pipeline_ctl.sh  xdp.sh
src/: LLM_Context.md  Makefile  README.md  ip_allowlist.json  load_ip_allowlist.py  log_rotate.sh  packet_injector.c  scratchpad.sh  vxlan_loader.c  vxlan_pipeline.bpf.c  vxlan_pipeline.h
tests/: README.md  TESTING.md  generate_packets.py  install_test_deps.sh  run_tests.sh  test_framework.sh  test_stress_load.py  (+3 more)
(+23 files in other folders)
