[project]
name = "xdp-vxlan-pipeline"
version = "1.0.0"
description = "XDP VXLAN Pipeline Testing Framework"
authors = [
    {name = "EBPF Team"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "scapy>=2.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true